--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,11 @@ python:
 install:
     - pip install -r requirements.txt
     - pip install 'pep8==1.7.0'
+    - pip install coveralls
     - USE_CYTHON=1 python setup.py build_ext --inplace -f install
 # actual test run can be added later
 script:
     - python -m unittest discover --verbose
     - python -m pep8 .
+after_success:
+    - coveralls
